Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* All widget captions changed to include proper application
  title name prefix.

* Attempt to bring those aging autoconf templates to date;
  sample SPEC file for RPM build is now being included and
  generated at configure time.

* Set to use QApplication::setMainWidget() instead of 
  registering the traditional lastWindowClosed() signal 
  to quit() slot, just to let the -geometry command line 
  argument have some effect on X11.

* Added MUTE/SOLO buttons to individual channel strips.

* Fixed compilation error which occured when Qt was
  compiled with -no-stl.


0.1.2   2005-06-23 Even minor workings needs a rest.

* Fixed output disability when messages limit option is 
  turned off (thanks to Wolfgang Woehl for spotting this
  one, while on qjackctl).

* Added CHANNEL_INFO event feedback notification handling;
  minor stream/voice usage auto-refresh cycle optimization.


0.1.1   2005-06-12 The mantra of bugfixes.

* New improved and full-featured application icon, thanks
  to Christian Schoenebeck design.

* Fixed refresh cycle of channel strips that are found
  in an error state, which was preventing correct channel
  info updates.

* Device configuration now accessible on toolbar. Added
  buddy text label to device port/channel combobox on the
  device dialog.

* Include libgig version info on command line request (-v).

* Minor configure and Makefile install fixes, as Debian and
  Mac OS X specialties. Also, install does the right thing
  with target file modes (thanks to Matt Flax and Ebrahim
  Mayat, for pointing these out).


0.1.0   2005-05-23  Device configuration breakthrough.

* Device configuration is now complete (EXPERIMENTAL).

* [bug #9] Fixed for a LSCP command syntax convention
  consistency, regarding the enumeration of available
  sampler engines, Audio and MIDI drivers.

* [bug #13] Update instrument names list when a new 